user profile completed

--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/MissionDetail.cshtml
@@ -362,7 +362,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="d-flex">
-                                            <img class="rounded-circle comments-img d-none d-md-flex" src=~/images/@com.User.Avtar />
+                                            <img class="rounded-circle comments-img d-none d-md-flex" src=~/images/Upload/User/@com.User.Avtar/>
                                             <div class="comments-details">
                                                 <h6>@com.User.FirstName @com.User.LastName</h6>
                                                 <p> @com.CreatedAt.Value.ToString("dddd, MMMM dd, yyyy, h:mm tt")</p>
@@ -436,7 +436,7 @@
             <div class="container volunteers-images-div ">
                 <h5>Recent Volunteers</h5>
                 <hr />
-                <partial name="_RecentVolunteers" />
+                <div class="volunteerd-images"></div>
             </div>
             <div class="container p-1 d-flex justify-content-between volunteerBtn border">
                 <a class=" flex-start border-end prevVolunteersBtn">
