--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_SearchNav.cshtml
@@ -4,7 +4,7 @@
 <div class="container justify-content-between d-flex">
     <div class="d-flex  col-auto">
       
-        <input style="width:18rem" type="text" class="form-control border-none" placeholder="Search mission..." aria-label="Search"
+        <input style="width:18rem" type="text" class="form-control border-none" placeholder="Search here..." aria-label="Search"
                aria-describedby="searchIcon" id="searchText">
     </div>
 
