--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"/>
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 
@@ -63,7 +63,7 @@
                                     </ul>
                                 </li>
 
-                               
+
 
                                 <li class="nav-item">
                                     <a asp-controller="Story" asp-action="StoryListing" class="nav-link">Stories</a>
@@ -96,7 +96,7 @@
 
                 @*navbar offcanvas ends*@
                 <a asp-controller="Home" asp-action="HomePage">
-                     <img  class="p-1" src="~/images/logo.png">
+                    <img class="p-1" src="~/images/logo.png">
                 </a>
                 @*navbar starts*@
                 <div class="d-flex d-none d-md-flex">
@@ -118,10 +118,10 @@
 
                     <a class="nav-item nav-link " href="#">
                         @*<li class="nav-item dropdown">
-                            <a class="nav-link ms-3 dropdown-toggle" asp-controller="Home" asp-action="StoryListing" id="navbarDarkDropdownMenuLink" role="button"
-                               data-bs-toggle="dropdown" aria-expanded="false">
-                                <span class="text-dark p-2">Stories</span>
-                            </a>
+                        <a class="nav-link ms-3 dropdown-toggle" asp-controller="Home" asp-action="StoryListing" id="navbarDarkDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <span class="text-dark p-2">Stories</span>
+                        </a>
                         </li>*@
 
                         <li class="nav-item">
@@ -206,9 +206,47 @@
 
 
     <div class="border-navbar"></div>
-    <footer class="footer">
-
+    <footer class="footer my-3">
         <a href="#" class="footer">Privacy Policy</a>
+        <a href="" class="footer" data-bs-toggle="modal" data-bs-target="#ContactUsModal">Contact Us</a>
+
+        <!-- Modal -->
+        <div class="modal fade" id="ContactUsModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="staticBackdropLabel">Contact Us</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div>
+                            <div class="mb-3">
+                                <label for="Name" class="form-label">Name </label>
+                                <input class="form-control" id="ContactName" type="text" value="@Username" aria-label="Disabled input example" disabled readonly>
+                            </div>
+                            <div class="mb-3">
+                                <label for="Email" class="form-label">Email Address </label>
+                                <input class="form-control" id="ContactEmail" type="email" value="@email" aria-label="Disabled input example" disabled readonly>
+                            </div>
+                            <div class="mb-3">
+                                <label for="Subject" class="form-label">Subject </label>
+                                <input class="form-control" id="ContactSubject" type="text" required placeholder="Enter your subject">
+                            </div>
+                            <div class="mb-3">
+                                <label for="Message" class="form-label">Message</label>
+                                <textarea class="form-control" id="ContactMessage" rows="3" placeholder="Enter your Message here..."></textarea>
+                            </div>
+                            <div class="d-flex justify-content-end">
+                                <button type="button" class="btn btn-outline-secondary rounded-pill" data-bs-dismiss="modal">Cancel</button>
+                                <button type="button" class="btn card-btn ms-2" id="ContactUsBtn">Save</button>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </footer>
 
 
@@ -233,9 +271,12 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="~/js/Filter.js" asp-append-version="true"></script>
-
-
+    @await RenderSectionAsync("Scripts", required: false)
 </body>
 
 </html>
+
+
+
+
 
