--- a/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Shared/_Layout.cshtml
@@ -20,9 +20,12 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
-
+  
     <link rel="stylesheet" href="~/css/HomePage.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
+   
+
 </head>
 
 <body style="display:flex; flex-direction:column; min-height:100vh;">
@@ -178,7 +181,7 @@
                         </a>
                         <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
                             <li><a class="dropdown-item" asp-controller="User" asp-action="UserProfile">My Profile</a></li>
-                            <li><a class="dropdown-item" href="#">Volunteering Timesheet</a></li>
+                            <li><a class="dropdown-item" asp-controller="VolunteeringTimesheet" asp-action="VolunteeringTimesheet">Volunteering Timesheet</a></li>
                             <li class="dropdown-divider"></li>
                             <li>
                                 <a asp-controller="Auth" asp-action="Logout" class="dropdown-item">
@@ -207,7 +210,7 @@
 
     <div class="border-navbar"></div>
     <footer class="footer my-3">
-        <a href="#" class="footer">Privacy Policy</a>
+        <a asp-controller="PrivacyPolicy" asp-action="PrivacyPolicy" class="footer">Privacy Policy</a>
         <a href="" class="footer" data-bs-toggle="modal" data-bs-target="#ContactUsModal">Contact Us</a>
 
         <!-- Modal -->
@@ -231,10 +234,12 @@
                             <div class="mb-3">
                                 <label for="Subject" class="form-label">Subject </label>
                                 <input class="form-control" id="ContactSubject" type="text" required placeholder="Enter your subject">
+                                <small class="text-danger validate-text" id="validateSubject"> </small>
                             </div>
                             <div class="mb-3">
                                 <label for="Message" class="form-label">Message</label>
                                 <textarea class="form-control" id="ContactMessage" rows="3" placeholder="Enter your Message here..."></textarea>
+                                <small class="text-danger validate-text" id="ValidateMessage"> </small>
                             </div>
                             <div class="d-flex justify-content-end">
                                 <button type="button" class="btn btn-outline-secondary rounded-pill" data-bs-dismiss="modal">Cancel</button>
@@ -252,14 +257,6 @@
 
 
 
-    @*  <script src="js/bootstrap.bundle.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>*@
-    @*<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
-    *@
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
@@ -269,8 +266,14 @@
     @*  <script src="https://cdn.jsdelivr.net/npm/popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     *@
 
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="~/js/Filter.js" asp-append-version="true"></script>
+ @*   <script>
+        $(document).ready(function () {
+            $('#myTable').DataTable();
+        });
+    </script>*@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
