--- a/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
+++ b/mvc/CI-Platform/CI-Platform-web/Views/Home/_MissionDisplayPartial.cshtml
@@ -1,11 +1,13 @@
-﻿@model CI_Platform.Entities.ViewModels.MissionListViewModel
+﻿@using CI_Platform.Entities.ViewModels
+@model PageListViewModel.PageList<MissionListViewModel>
+
 @{
     //var Id = ViewBag.Id;
-    var email = ViewBag.email;
-    var Username = ViewBag.Username;
+    //var email = ViewBag.email;
+    //var Username = ViewBag.Username;
 
     var Id = Convert.ToInt64(ViewBag.UserId);
-    var totalRecords = ViewBag.totalRecords;
+    //var totalRecords = ViewBag.totalRecords;
 }
 
 
@@ -21,70 +23,86 @@
 </script>
 
 
-<span id="missionCount" class="d-none">@totalRecords</span>
+@*<span id="missionCount" class="d-none">@totalRecords</span>*@
 
 @*grid view*@
 <div class="container my-5" id="grid-view">
     <div class=" row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-sm-1 g-4">
-       
-        <!-- Card starts from col -->
-        @foreach (var obj in Model.DisplayMissionCardsDemo)
-        {
-            double avg_rating = 0;
-            if (obj.MissionRatings.Count > 0)
-            { avg_rating = obj.MissionRatings.Average(r => r.Rating); }
 
-            DateTime? currDate = @DateTime.Now;
-            TimeSpan timeSpan = new TimeSpan(1, 0, 0, 0);
-            var deadline = obj.StartDate - timeSpan;
-            bool isDeadlinePassed = currDate > deadline;
-            bool isEndDatePassed = currDate > obj.EndDate;
-            bool isOngoing = currDate > obj.StartDate;
-            bool isAlreadyApplied = obj.MissionApplications.Any(a => a.UserId == Id);
-            var flag = 1;
-            var registered_users = obj.MissionApplications.Count(m => m.ApprovalStatus.Contains("APPROVE"));
-            var seats_left = obj.TotalSeats - registered_users;
-            var mission_id = obj.MissionId;
+        <!-- Card starts from col -->
+        @foreach (var obj in Model.Records)
+        {
+            @*double avg_rating = 0;
+        if (obj.MissionRatings.Count > 0)
+        { avg_rating = obj.MissionRatings.Average(r => r.Rating); }
+
+        DateTime? currDate = @DateTime.Now;
+        TimeSpan timeSpan = new TimeSpan(1, 0, 0, 0);
+        var deadline = obj.StartDate - timeSpan;
+        bool isDeadlinePassed = currDate > deadline;
+        bool isEndDatePassed = currDate > obj.EndDate;
+        bool isOngoing = currDate > obj.StartDate;
+        bool isAlreadyApplied = obj.MissionApplications.Any(a => a.UserId == Id);
+        var flag = 1;
+        var registered_users = obj.MissionApplications.Count(m => m.ApprovalStatus.Contains("APPROVE"));
+        var seats_left = obj.TotalSeats - registered_users;
+        var mission_id = obj.MissionId;*@
 
             <div class="col card-div ">
                 <div class="card grid-card h-100 shadow">
-                    <span class="d-none"> @obj.MissionId </span>
-                    <span class="created-date d-none ">@obj.CreatedAt </span>
+                    <span class="d-none"> @obj.MissionCard.MissionId </span>
+                    <span class="created-date d-none ">@obj.MissionCard.CreatedAt </span>
 
-                    <p class="mission-skill d-none">
-                        @foreach (var skill in obj.MissionSkills)
-                        {
-                            <span class=" skillName">@skill.Skill.SkillName</span>
-                        }
-                    </p>
-                    <span class="mission-country d-none">@obj.Country.CountryId</span>
+                    @*<p class="mission-skill d-none">
+                @foreach (var skill in obj.skillName)
+                {
+                <span class=" skillName">@skill.Skill.SkillName</span>
+                }
+                </p>*@
+                    <span class="mission-country d-none">@obj.MissionCard.CountryId</span>
                     <span> </span>
                     <div class="pill-on-img">
 
-                        @if (!obj.MissionMedia.Any())
+
+                        @if (obj.missionMedia.Count() == 0)
                         {
                             <img src="~/images/no-image.png" class="card-img-top" />
                         }
                         else
                         {
-                            @foreach (var img_mission in obj.MissionMedia)
+
+                            @foreach (var img in obj.missionMedia.Take(1))
                             {
-                                @if (img_mission.Defaultval == true)
-                                {
-                                    <img src="~/images/@img_mission.MediaPath" class="card-img-top" alt="@img_mission.MediaName">
-                                }
+
+
+                                <img src="~/images/@img" class="card-img-top">
                             }
                         }
 
-                        @if (isAlreadyApplied)
+                        @*                        @if (obj.missionMedia is null)
+                    {
+                    <img src="~/images/no-image.png" class="card-img-top" />
+                    }
+                    else
+                    {
+                    @foreach (var img_mission in obj.MissionMedia)
+                    {
+                    @if (img_mission.Defaultval == true)
+                    {
+                    <img src="~/images/@obj.missionMedia" class="card-img-top">
+                    }
+                    }
+                    }*@
+
+                        @if (obj.Applied)
                         {
                             <div class="applied-pill" style="background:green 0% 0% no-repeat;">
                                 <span>APPLIED</span>
                             </div>
                         }
-                        @if (obj.MissionType.Equals("Time"))
+                        @if (obj.MissionCard.MissionType.Equals("Time"))
                         {
-                            if (isDeadlinePassed || isEndDatePassed)
+                            if (obj.HasDeadlinePassed || obj.HasEndDatePassed)
                             {
                                 <div class="applied-pill" style="background:red 0% 0% no-repeat;">
                                     <span>CLOSED</span>
@@ -94,29 +112,26 @@
 
                         <div class="location">
                             <img src="~/images/pin1.png">
-                            <span class="mission-city">@obj.City.CityName</span>
+                            <span class="mission-city">@obj.CityName</span>
                         </div>
 
+                        @if (obj.favMission)
+                        {
+                            <button class="  like-on-img favourite-button" onclick="favourite()" data-mission-id="@obj.MissionCard.MissionId">
+                                <i class="bi bi-heart-fill  filled-heart text-danger"></i>
 
-                        @foreach (var fm in obj.FavouriteMissions)
-                        {
-                            @if (fm.UserId.Equals(Id))
-                            {
-                                <button class="  like-on-img favourite-button" onclick="favourite()" data-mission-id="@obj.MissionId">
-                                    <i class="bi bi-heart-fill  filled-heart text-danger" ></i>
-                                    
-                                </button>
-                                flag = 0;
-                            }
+                            </button>
+
                         }
-                        @if (flag == 1)
+
+                        else
                         {
-                            <button class="favourite-button  like-on-img " onclick="favourite()" data-mission-id="@obj.MissionId">
-                                <i class="bi bi-heart empty-heart text-light  " ></i>
+                            <button class="favourite-button  like-on-img " onclick="favourite()" data-mission-id="@obj.MissionCard.MissionId">
+                                <i class="bi bi-heart empty-heart text-light  "></i>
                             </button>
                         }
 
-                        <button class="add-on-img" type="submit" data-user-id="@Id" data-mission-id="@mission_id" data-bs-toggle="modal" data-bs-target="#GridViewCoworkerInviteModal">
+                        <button class="add-on-img" type="submit" data-user-id="@Id" data-mission-id="@obj.MissionCard.MissionId" data-bs-toggle="modal" data-bs-target="#GridViewCoworkerInviteModal">
                             <img style="opacity: 1;" src="~/images/add1.png">
                         </button>
 
@@ -142,28 +157,28 @@
 
 
 
-                        <div class="theme-pill rounded-pill "> <span class="mission-theme">@obj.MissionTheme.Title</span>  </div>
+                        <div class="theme-pill rounded-pill "> <span class="mission-theme">@obj.ThemeTitle</span>  </div>
                     </div>
                     <div class="card-body">
-                        <h3 class="card-title ">@obj.Title</h3>
+                        <h3 class="card-title ">@obj.MissionCard.Title</h3>
                         <p class="card-text align-items-center">
                             @{
                                 int maxLength = 100;
-                                string description = obj.Description.Length > maxLength
-                                ? @obj.Description.Substring(0, maxLength) + "..."
-                                : @obj.Description;
+                                string description = obj.MissionCard.Description.Length > maxLength
+                                ? @obj.MissionCard.Description.Substring(0, maxLength) + "..."
+                                : @obj.MissionCard.Description;
                             }
 
                             @description
                         </p>
                         <div class="d-flex justify-content-between">
-                            @obj.OrganizationName
+                            @obj.MissionCard.OrganizationName
                             <div class="stars">
-                                @for (int i = 1; i <= avg_rating; i++)
+                                @for (int i = 1; i <= obj.avgRating; i++)
                                 {
                                     <img src="~/images/selected-star.png" />
                                 }
-                                @for (int i = 5; i > avg_rating; i--)
+                                @for (int i = 5; i > obj.avgRating; i--)
                                 {
                                     <img src="~/images/star.png" />
                                 }
@@ -174,10 +189,10 @@
                     </div>
 
 
-                    @if (isEndDatePassed || isAlreadyApplied || seats_left <= 0 || isDeadlinePassed)
+                    @if (obj.HasEndDatePassed || obj.Applied || obj.seatsLeft <= 0 || obj.HasDeadlinePassed)
                     {
                         <div class=" d-flex pb-3 justify-content-center">
-                            <a class="btn btn card-btn" href="@Url.Action("MissionDetail", "Home" , new { MissionId = @obj.MissionId})">
+                            <a class="btn btn card-btn" href="@Url.Action("MissionDetail", "Home" , new { MissionId = @obj.MissionCard.MissionId})">
                                 View Details &nbsp;&nbsp;<img src="~/images/right-arrow.png" />
                                 <img src="~/images/right-arrow2.png" />
                             </a>
@@ -187,20 +202,20 @@
                     {
                         <div class="m-3 list-group position-relative ">
                             <div class="time-pill rounded-pill ">
-                                @if (obj.MissionType.Equals("Time"))
+                                @if (obj.MissionCard.MissionType.Equals("Time"))
                                 {
-                                    if (isOngoing)
+                                    if (obj.IsOngoing)
                                     {
                                         <span>Ongoing Opportunity</span>
                                     }
                                     else
                                     {
-                                        <span>From @obj.StartDate.Value.ToShortDateString() until @obj.EndDate.Value.ToShortDateString()</span>
+                                        <span>From @obj.MissionCard.StartDate.Value.ToShortDateString() until @obj.MissionCard.EndDate.Value.ToShortDateString()</span>
                                     }
                                 }
                                 else
                                 {
-                                    @foreach (var goal_mission in obj.GoalMissions)
+                                    @foreach (var goal_mission in obj.goalMission)
                                     {
                                         @goal_mission.GoalObjectiveText
                                     }
@@ -211,23 +226,23 @@
                                     <img class="icon-detail my-2" src="~/images/Seats-left.png" alt="seats left">
                                     <div class="card-detail-text">
 
-                                        <p class="seat-left">  @seats_left </p>
+                                        <p class="seat-left">  @obj.seatsLeft </p>
                                         <span>Seats left</span>
                                     </div>
                                 </div>
-                                @if (obj.MissionType.Equals("Time"))
+                                @if (obj.MissionCard.MissionType.Equals("Time"))
                                 {
                                     <div class="col card-detail">
                                         <img class="icon-detail my-2" src="~/images/deadline.png" alt="deadline">
                                         <div class="card-detail-text ">
-                                            <p class="deadline">@obj.StartDate.Value.AddDays(-1).ToShortDateString()</p>
+                                            <p class="deadline">@obj.MissionCard.StartDate.Value.AddDays(-1).ToShortDateString()</p>
                                             <span>Deadline</span>
                                         </div>
                                     </div>
                                 }
                                 else
                                 {
-                                    @foreach (var goal_mission in obj.GoalMissions)
+                                    @foreach (var goal_mission in obj.goalMission)
                                     {
                                         <div class="col card-detail">
                                             <img class="icon-detail my-2" src="~/images/achieved.png" alt="deadline">
@@ -246,7 +261,7 @@
 
 
                         <div class=" d-flex pb-3 justify-content-center">
-                            <a class="btn card-btn" href="@Url.Action("MissionDetail", "Home" , new { MissionId = @obj.MissionId})">
+                            <a class="btn card-btn" href="@Url.Action("MissionDetail", "Home" , new { MissionId = @obj.MissionCard.MissionId})">
                                 Apply  &nbsp;&nbsp;&nbsp;
                                 <img src="~/images/right-arrow.png">
                                 <img src="~/images/right-arrow2.png" />
@@ -265,8 +280,8 @@
 </div>
 
 @*list view*@
-<div class="container " id="list-view">
-    @foreach (var obj in Model.DisplayMissionCardsDemo)
+@*<div class="container " id="list-view">
+    @foreach (var obj in Model.Records)
     {
         double avg_rating = 0;
         if (obj.MissionRatings.Count > 0)
@@ -474,13 +489,6 @@
                                     </a>
                                 </div>
                             }
-                            @*  <div>
-                        <button type="submit" class="btn card-btn">
-                        View Details
-                        <img src="~/images/right-arrow.png">
-                        <img src="~/images/right-arrow2.png" />
-                        </button>
-                        </div>*@
                         </div>
 
                     </div>
@@ -488,4 +496,4 @@
             </div>
         </div>
     }
-</div>
+</div>*@
